--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,10 +1,12 @@
 <div class="container">
   <br />
-  <h2 class="text-center">
-    API TikTok
-  </h2>
+  <h2 class="text-center">Orbit Tik Tok API</h2>
   <br />
-  <form class="border rounded p-4 mb-4 w-50 align-self-center mx-auto shadow p-3 mb-5 bg-white rounded" (ngSubmit)="sendToBackend()" #form="ngForm">
+  <form
+    class="border rounded p-4 mb-4 w-50 align-self-center mx-auto shadow p-3 mb-5 bg-white rounded"
+    (ngSubmit)="sendToBackend()"
+    #form="ngForm"
+  >
     <div class="form-group">
       <label for="KeyWord">Palavra chave: *</label>
       <input
@@ -18,9 +20,11 @@
         [(ngModel)]="keyword"
       />
     </div>
-    
+
     <div class="form-group mt-4">
-      <label for="exampleFormControlSelect">Selecione a data das postagens</label>
+      <label for="exampleFormControlSelect"
+        >Selecione a data das postagens</label
+      >
       <select
         class="form-control custom-select"
         id="exampleFormControlSelect"
@@ -29,17 +33,22 @@
         [(ngModel)]="dataPostagem"
       >
         <option value="0">Tudo</option>
-        <option value="1">Últimas 24 Horas</option>
+        <option [selected] value="1">Últimas 24 Horas</option>
         <option value="7">Essa semana</option>
         <option value="30">Esse mês</option>
         <option value="90">Últimos 3 meses</option>
         <option value="180">Últimos 6 meses</option>
       </select>
     </div>
-    
+
     <div class="form-group mt-4">
       <label for="KeyWord">Região</label>
-      <select class="form-control" id="region" name="region" [(ngModel)]="region">
+      <select
+        class="form-control"
+        id="region"
+        name="region"
+        [(ngModel)]="region"
+      >
         <option value="BR">Brasil</option>
         <option value="US">Estados Unidos</option>
         <option value="AR">Argentina</option>
@@ -89,19 +98,27 @@
         name="countPost"
         [value]="countPost"
         aria-describedby="countPost"
-        placeholder="Quantas postagens deseja?"        
+        placeholder="Quantas postagens deseja?"
         [(ngModel)]="countPost"
       />
     </div>
 
     <br />
 
-    <div style="text-align: end;">
-      <p style="font-size:11px">* Campos obrigatórios</p>
+    <div style="text-align: end">
+      <p style="font-size: 11px">* Campos obrigatórios</p>
     </div>
 
-    <div style="text-align: center">
-      <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Baixar arquivos</button>
+    <div style="text-align: center" *ngIf="!loading">
+      <button type="submit" class="btn btn-primary" [disabled]="form.invalid">
+        Baixar arquivos
+      </button>
+    </div>
+
+    <div class="d-flex justify-content-center" *ngIf="loading">
+      <div class="spinner-border" role="status">
+        <span class="sr-only"></span>
+      </div>
     </div>
   </form>
 </div>
