Atualização no Formulário

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -89,7 +89,7 @@
       </select>
     </div>
 
-    <div class="form-group mt-4">
+    <!-- <div class="form-group mt-4">
       <label for="countPost">Quantidade de postagens</label>
       <input
         type="number"
@@ -101,7 +101,7 @@
         placeholder="Quantas postagens deseja?"
         [(ngModel)]="countPost"
       />
-    </div>
+    </div> -->
 
     <br />
 
